@@ -16,6 +16,8 @@ Post-v21.03.0
     be used in the logical flow matches.  CMS can consider setting this to
     false, if they want to use smart NICs which don't support offloading
     datapath flows with this field used.
+  - Introduce a new "allow-stateless" ACL verb to always bypass connection
+    tracking. The existing "allow" verb behavior is left intact.
 
 OVN v21.03.0 - 12 Mar 2021
 -------------------------
